fixed an issue where the password submodal was being hidden behind the action button in the 'create accout' get started modal

--- a/frontend/src/components/modals/passwordSubModal/PasswordSubModal.module.css
+++ b/frontend/src/components/modals/passwordSubModal/PasswordSubModal.module.css
@@ -1,11 +1,8 @@
 .subModal{
     z-index: 1000;
     visibility: visible;
-    position: absolute;
     display: flex;
     height: 110px;
-    width: 91%;
-    left: 10%;
     margin-top: 5px;
     border-radius: 8px;
     align-content: center;
@@ -14,6 +11,8 @@
     border: 2px solid white;
     box-shadow: 4px 6px 12px rgba(0, 0, 0, 0.6);
     font-size: .9rem;
+    position: fixed;
+    width: 350px;
 }
 .subModal.isValidPassword{
     visibility: hidden;
@@ -139,4 +138,10 @@
 }
 .eightCheck.isValidEight{
     display: inline;
+}
+/* ********************************************************************* Width under 600px */
+@media (max-width: 600px) {
+    .subModal{
+        width: 334px;
+    }
 }
